# aiea

./: README.md  pyproject.toml
aiea/: __init__.py  __main__.py  ingestion.py  learner.py  models.py
aiea/reporters/: __init__.py  console.py  markdown.py
aiea/sniffers/: __init__.py  bloated_context.py  death_loop.py  toxic_file.py
tests/: test_regressions.py
